--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "private": true,
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "browser-sync": "^2.7.7",
+    "eslint": "^4.3.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-angular": "^3.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "fs-javascript": "github:fs-webdev/fs-javascript",
     "gulp": "^3.8.5",
     "gulp-load-plugins": "^0.10.0",
     "run-sequence": "^1.0.2"
