--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "fs-javascript": "github:fs-webdev/fs-javascript",
     "gulp": "^3.8.5",
+    "gulp-eslint": "^4.0.0",
     "gulp-load-plugins": "^0.10.0",
     "run-sequence": "^1.0.2"
   },
